Only send autofill JS on visible webStates.

When autofilling credit card, the CVC prompt View disables
the webState.
JS processing may be different when view is not visible. This
makes some sites like walgreens.com flaky.
This CL queue the JS if the webState is not visible and executes
it after |webStateWasShown| is called.

Bug: 728606
Change-Id: I7a9ffd5e15d403a7faf9f7f4f4151371474676d5
Reviewed-on: https://chromium-review.googlesource.com/817277
Commit-Queue: Olivier Robin <olivierrobin@chromium.org>
Reviewed-by: Moe Ahmadi <mahmadi@chromium.org>
Reviewed-by: Peter Lee <pkl@chromium.org>
Cr-Commit-Position: refs/heads/master@{#524354}
Former-commit-id: 5097771cd07a2425c3a610379dab99805a3fc9f7